ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prueba-k8s
spec:
  rules:
  - host: www.oscarsanabria.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prueba-k8s
            port:
              number: 80
